--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 body{
-    background-color: darkcyan;
+    margin: 0;
+}
+
+h1{
+    margin-top: 0;
+}
+
+div{
+    background-color:#75cfb8;
+    
 }
