--- a/css/style.css
+++ b/css/style.css
@@ -8,5 +8,18 @@ h1{
 
 div{
     background-color:#75cfb8;
-    
+       
 }
+
+.middle-container{
+    background-color: crimson;
+    height: 200px;
+    width: 200px;
+}
+
+.bottom-container{
+    background-color: deepskyblue;
+    height: 200px;
+    width: 200px;
+}
+
