--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,42 @@
-body{
+body {
     margin: 0;
     text-align: center;
     font-family: 'Merriweather', serif;
 }
 
-h1{
-    margin-top: 0;
+h1 {
+    margin: 0 auto 0 auto;
     font-family: 'Sacramento', cursive;
+    font-size: 4.8rem;
 }
 
-h2{
+h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.8rem;
+}
+
+h3 {
     font-family: 'Montserrat', sans-serif;
 }
 
-h3{
-    font-family: 'Montserrat', sans-serif;
-}
-
-div{
-    background-color:#75cfb8;
-       
-}
-
-.top-container{
-    background-color:#75cfb8;
+.top-container {
+    background-color: #75cfb8;
     position: relative;
     padding-top: 100px;
 }
 
-.middle-container{
-    background-color: crimson;
-    height: 200px;
-    width: 200px;
-}
+.middle-container {}
 
-.bottom-container{
-    background-color: deepskyblue;
-    height: 200px;
-    width: 200px;
-}
+.bottom-container {}
 
-.top-cloud{
+.top-cloud {
     position: absolute;
     right: 8px;
     bottom: 880px;
 }
 
-.bottom-cloud{
+.bottom-cloud {
     position: absolute;
     left: 30px;
     bottom: 800px;
 }
-
