--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,28 @@ body {
 }
 
 h1 {
+   
+    color: #178383;
     margin: 0 auto 0 auto;
     font-family: 'Sacramento', cursive;
     font-size: 4.8rem;
 }
 
 h2 {
+    font-weight: normal;
+    color: #177a7a;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.8rem;
 }
 
 h3 {
+    color: #11999E;
     font-family: 'Montserrat', sans-serif;
+   
 }
 
 .top-container {
-    background-color: #75cfb8;
+    background-color: #6fb1c8;
     position: relative;
     padding-top: 100px;
 }
@@ -39,4 +45,34 @@ h3 {
     position: absolute;
     left: 30px;
     bottom: 800px;
+}
+
+.skill-row{
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+    line-height: 2;
+    
+}
+
+
+
+.skill01{
+    width: 28%;
+    float: left;
+    margin-right: 30px;
+}
+
+.skill02{
+  width: 28%;
+  float: right;
+  margin-left: 30px;
+}
+
+.skill01-description{
+    clear: left;
+}
+
+.skill02-description{
+    clear :right;
 }
